--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.3",
     "material-icons": "^1.13.1",
+    "ngx-device-detector": "^5.0.1",
     "ngx-owl-carousel-o": "^15.0.0",
     "primeicons": "^6.0.1",
     "rxjs": "~7.5.0",
